[tool.poetry]
name = "flowprint"
version = "1.1.0"
description = "FlowPrint: Semi-Supervised Mobile-App Fingerprinting on Encrypted Network Traffic"
authors = ["Thijs van Ede"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.8"
pandas = ">=1.0"
cryptography = ">=2.9"
numpy = ">=1.18"
matplotlib = ">=3.2"
networkx = ">=2.4"
pyshark = ">=0.4"
scikit_learn = ">=0.23"

[tool.poetry.dev-dependencies]
bandit = ">=1.6"
flake8 = ">=3.8"
isort = ">=4.3"
black = ">=19.10b0"

[tool.poetry.scripts]
flowprint = "cli:main"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
known_first_party = ["flowprint"]
force_sort_within_sections = true

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
